--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -200,6 +200,7 @@ dl {
 }
 
 .options {
+	z-index: 20;
   position: relative;
 
   .options-btn {
@@ -215,8 +216,8 @@ dl {
     display: none;
     list-style: none;
     position: absolute;
-    top: calc(100% + 10px);
-    right: 0;
+    top: calc(100% + 20px);
+    right: -5px;
     background-color: $primary-color;
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
