--- a/app/assets/stylesheets/core/_pagination.scss
+++ b/app/assets/stylesheets/core/_pagination.scss
@@ -9,10 +9,11 @@
 }
 
 .pagination {
-  margin-top: 25px;
+  padding-top: 25px;
   display: flex;
   justify-content: center;
   border-left: 1px solid #ddd;
+  width: 100%;
 
   span:not(.current) {
     &:hover a {
