--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -88,16 +88,16 @@
 		  			<% end %>
 		  		</section>
 
-		  		<% if !@order.start_date.nil? && !@order.removal_technician == 0 %>
-		    		<%= content_tag :p, class: "m-t-25 text-center" do %>
-		  				<%= "Retirado em <strong>#{@order.start_date.strftime("%d/%m/%Y")}</strong> por <strong>#{get_user(@order.removal_technician)}</strong>".html_safe %>
+		  		<% if !@order.start_date.nil? && @order.removal_technicians.length > 1 %>
+		    		<%= content_tag :p, class: "m-t-15 text-center" do %>
+		  				<%= "Retirado em <strong>#{@order.start_date.strftime("%d/%m/%Y")}</strong> por <strong>#{get_user(@order.removal_technicians)}</strong>".html_safe %>
 		  			<% end %>
 					<% end %>
 
-		  		<%= content_tag :p, class: "m-t-25 text-center" do %>
-						<%= "Manutenção feita por <strong>#{get_user(@order.maintenance_technician)}</strong>".html_safe if !@order.maintenance_technician == 0 %>
+		  		<%= content_tag :p, class: "m-t-15 text-center" do %>
+						<%= "Manutenção feita por <strong>#{get_user(@order.maintenance_technicians)}</strong>".html_safe if @order.maintenance_technicians.length > 1 %>
 						<%= " e entregue em <strong>#{@order.end_date.strftime("%d/%m/%Y")}</strong>".html_safe if !@order.end_date.nil? %>
-					<% end if !@order.maintenance_technician == 0 && !@order.end_date.nil? %>
+					<% end if @order.maintenance_technicians.length > 1 && !@order.end_date.nil? %>
 				</section>
 			</div>
 		</div>
