added 'canceled' order's status

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -10,7 +10,7 @@ $grey: #e5e8e8;
 $info: #2dccff;
 $warning: #ffb302;
 $alert: #ff3838;
-$success: #00ae69;
+$success: #3dc13c;
 
 $orange: #fe8003;
 $green: #aed739;
