--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -44,7 +44,7 @@
 		  			<% end %>
 
 		      	<%= content_tag :dl do %>
-		    			<%= content_tag :dt, "Número de patrimônio" %>
+		    			<%= content_tag :dt, "Patrimônio/Nº série" %>
 		  				<%= content_tag :dd, get_patrimony(@order.stuff.patrimony) %>
 		  			<% end %>
 
