--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -10,6 +10,7 @@
 					<h1 class="header-title">Lista de <span>equipamentos</span></h1>
 
 					<div class="right-content">
+						<%= link_to "#", alt: "Filtrar dados", title: "Filtrar dados", class: "btn icon enable-filters" do %><span class="material-icons md-16 md-light">search</span>Filtro avançado<% end %>
 						<%= link_to new_stuff_path, class: "btn-success icon" do %><span class="material-icons md-16 md-light">add</span>Cadastrar equipamento<% end %>
 					</div>
 				</header>
