--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -46,8 +46,8 @@
 		          <div class="row m-t-25">
 		          	<div class="col-12 col-sm-4">
 		          		<div class="input string" id="autocomplete-patrimony">
-		          			<label for="order[stuff_attributes][patrimony]" class="form-label">Patrimônio</label>
-										<%= autocomplete_field_tag "order[stuff_attributes][patrimony]", @patrimony, autocomplete_stuff_patrimony_orders_path, append_to: "#autocomplete-patrimony", 'data-showNoMatches' => false, maxlength: 6 %>
+		          			<label for="order[stuff_attributes][patrimony]" class="form-label">Patrimônio/Nº série</label>
+										<%= autocomplete_field_tag "order[stuff_attributes][patrimony]", @patrimony, autocomplete_stuff_patrimony_orders_path, append_to: "#autocomplete-patrimony", 'data-showNoMatches' => false %>
 									</div>
 		          	</div>
 
