--- a/app/views/stuffs/new.html.erb
+++ b/app/views/stuffs/new.html.erb
@@ -31,7 +31,7 @@
 
 		      	<div class="row">
 							<div class="col-12 col-sm-4">
-		        		<%= f.input :patrimony, label: "Patrimônio", label_html: { class: "form-label" }, input_html: { maxlength: 6 } %>
+		        		<%= f.input :patrimony, label: "Patrimônio", label_html: { class: "form-label" } %>
 		        	</div>      		
 
 							<div class="col-12 col-sm-4">
