added 'defaulted' column to stuffs table and a rule to start/end date's order limited to today

--- a/app/assets/stylesheets/core/_form.scss
+++ b/app/assets/stylesheets/core/_form.scss
@@ -337,7 +337,7 @@
 		content: "";
 		width: 16px;
 		height: 16px;
-		@include background("icons/search.svg", "icon");
+		// @include background("icons/search.svg", "icon");
 		position: absolute;
 		right: 15px;
 		top: 50%;
