--- a/app/views/stuffs/edit.html.erb
+++ b/app/views/stuffs/edit.html.erb
@@ -28,7 +28,7 @@
 							<div class="col-12 col-lg-4 col-md-5 col-sm-6">
 		        		<div class="input string" id="autocomplete-patrimony">
 		        			<label for="stuff[patrimony]" class="form-label">Patrimônio</label>
-									<%= autocomplete_field_tag "stuff[patrimony]", @stuff.patrimony, autocomplete_stuff_patrimony_orders_path, append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, maxlength: 6 %>
+									<%= autocomplete_field_tag "stuff[patrimony]", @stuff.patrimony, autocomplete_stuff_patrimony_orders_path, append_to: "#autocomplete-patrimony",'data-showNoMatches' => false %>
 								</div>
 		        	</div>
 	        	</div>
@@ -45,7 +45,11 @@
 							</div>	      		
 		      	</div>
 
-		        
+		        <div class="row">
+							<div class="col-12 col-lg-4 col-md-5 col-sm-6">
+				      	<%= f.input :defaulted, required: false, label: "Equipamento está padronizado?", collection: ["Sim", "Não"], include_blank: false, label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+							</div>	      		
+		      	</div>
 			    <% end %>
 				</section>
 			</div>
