--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -50,6 +50,12 @@
 				</div>
 			</div>
 
+			<div class="row">
+				<div class="col-12 text-center">
+					<%= link_to stuffs_path, class: "btn-cancel icon" do %>Limpar filtros<% end %>
+				</div>
+			</div>
+
 			<%= submit_tag ("Buscar") %>
 		<% end %>
 
